@@ -87,6 +87,8 @@ PKG_CHECK_MODULES(GTK, [
 AC_SUBST(GTK_CFLAGS)
 AC_SUBST(GTK_LIBS)
 
+GTK_LIBS="-export-dynamic $GTK_LIBS"
+
 PKG_CHECK_MODULES(QALCULATE, [
 	libqalculate >= 0.8.1
 	])
